; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_skip_prologue.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ia64-tdep.c_ia64_skip_prologue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ia64_frame_cache = type { i64, i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ia64_skip_prologue(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.ia64_frame_cache, align 8
  store i64 %0, i64* %2, align 8
  %4 = getelementptr inbounds %struct.ia64_frame_cache, %struct.ia64_frame_cache* %3, i32 0, i32 3
  store i64 0, i64* %4, align 8
  %5 = getelementptr inbounds %struct.ia64_frame_cache, %struct.ia64_frame_cache* %3, i32 0, i32 2
  store i64 0, i64* %5, align 8
  %6 = getelementptr inbounds %struct.ia64_frame_cache, %struct.ia64_frame_cache* %3, i32 0, i32 1
  store i64 0, i64* %6, align 8
  %7 = getelementptr inbounds %struct.ia64_frame_cache, %struct.ia64_frame_cache* %3, i32 0, i32 0
  store i64 0, i64* %7, align 8
  %8 = load i64, i64* %2, align 8
  %9 = load i64, i64* %2, align 8
  %10 = add nsw i64 %9, 1024
  %11 = call i64 @examine_prologue(i64 %8, i64 %10, i32 0, %struct.ia64_frame_cache* %3)
  ret i64 %11
}

declare dso_local i64 @examine_prologue(i64, i64, i32, %struct.ia64_frame_cache*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
